<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dv_ros2_monodepth</name>
  <version>0.0.0</version>
  <description>Single container package for unified event capture and f3 based monocular depth.</description>
  <maintainer email="richeek@seas.upenn.edu">Richeek Das</maintainer>
  <license>Apache-2.0</license>


  <!-- Capture package dependences -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dv_ros2_msgs</depend>
  <depend>dv_ros2_messaging</depend>
  <depend>dv_ros2_capture</depend>
  <depend>dv_ros2_unified</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
